Make changes to fix 'whitespace' on the right hand side of the screen using margin properties. Keep testing for solutions

--- a/homepage/homepage.css
+++ b/homepage/homepage.css
@@ -1,13 +1,15 @@
 /* 'body' selector for overall background color */
-body {
+html, body {
     background-color: white;
+    margin: 0;
 }
 
 /* border ONLY selector */
 .border {
     background-color: #f9c702;
+    height: 119px;
     margin-left: -10px;
-    margin-right: -50px;
+    margin-right: -110px;
     margin-top: -10px; 
     max-width: 115%;
 }
@@ -21,9 +23,14 @@ body {
     font-size: 30px;
 }
 
+.panel h5 {
+    position: relative; right: -920px; top: 7px;
+}
+
 .panel a {
     color: black;
     text-decoration: none;
+    position: relative; top: 8px; left: 8px;
 }
 
 .panel-two {
@@ -43,8 +50,8 @@ body {
     position: relative; bottom: -50px;
 }
 
-.flag-lang a {
-    position: relative; bottom: -30px; left: 963px;
+.flag-lang a img {
+    position: relative; bottom: -30px; left: 864px;
 }
 
 .lang {
@@ -59,7 +66,7 @@ body {
 }
 
 .lang h5 {
-    position: absolute; bottom: -10px; left: 17px;
+    position: absolute; top: -36px; left: 17px;
 }
 
 .lang a {
@@ -72,11 +79,11 @@ body {
 }
 
 /* Panel-three onwards only */
-
 .two {
     background-image: linear-gradient(#369eff, white);
     height: 500px;
     margin-left: -60px;
+    margin-right: -60px;
     text-align: center;
     position: relative; top: 250px;
 }
@@ -85,23 +92,27 @@ body {
     position: relative; top: 200px;
 }
 
+/* bottom border selctors only */
 .bottom-border {
     background-color: #f9c702;
-    width: 1482px;
+    max-width: 120%;
+    width: 1502px;
     height: 181px;
     padding-top: 30px;
     margin-top: -12.5px;
-    margin-left: -8px;
-    position: relative; top: 250px;
+    margin-left: -30px;
+    position: relative; top: 250px; 
 }
 
 .bottom-container {
     position: relative; left: -580px; top: -20px;
+    margin-right: -50px;
 }
 
 #email {
     display: flex;
     gap: 5px;
+    position: relative; left: 30px;
 }
 
 #email img {
@@ -120,7 +131,7 @@ body {
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     display: flex;
     gap: 5px;
-    position: relative; left: 600px; top: 5px;
+    position: relative; left: 630px; top: 5px;
 }
 
 #linkedin h5 a {
@@ -134,7 +145,7 @@ body {
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     display: flex;
     gap: 5px;
-    position: relative; left: 600px; top: -2px;
+    position: relative; left: 630px; top: -2px;
 }
 
 #github h5 a {
@@ -142,4 +153,8 @@ body {
     position: relative; top: -20px;
     color: black;
     text-decoration: none;
+}
+
+.bottom-border.two {
+    width: 200px;
 }
